[package]
name = "neurotoken"
version = "0.1.0"
edition = "2021"
description = "Neurotoken: a modular, in-memory ledger and token engine in Rust."
license = "MIT"
repository = "https://github.com/Doctor0Evil/Neurotoken"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
